vik-customizations/keycloak.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: keycloak
  name: keycloak-vik-pod
spec:
  containers:
    - args:
        - start
      image: quay.io/keycloak/keycloak:22.0.0
      imagePullPolicy: IfNotPresent
      name: keycloak
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /realms/master
          port: 8080
          scheme: HTTP
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
